feat(auth): login and register endpoint

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ BACKEND_TAKE_HOME_MYSQL_HOST=db
 BACKEND_TAKE_HOME_MYSQL_PORT=3306
 
 # JWT CONFIG
-BACKEND_TAKE_HOME_JWT_PRIVATE_KEY_PATH=backend_takehome_rsa
-BACKEND_TAKE_HOME_JWT_PUBLIC_KEY_PATH=backend_takehome_rsa.pub
+BACKEND_TAKE_HOME_JWT_PRIVATE_KEY_PATH=./app/cert/backend_takehome_rsa
+BACKEND_TAKE_HOME_JWT_PUBLIC_KEY_PATH=./app/cert/backend_takehome_rsa.pub
